--- a/assets/css/dashboard.css
+++ b/assets/css/dashboard.css
@@ -134,12 +134,12 @@ body, html {
 }
 .dashboard-container .right-side .stats-wrapper {
   display: flex;
-  justify-content: space-around;
   padding: 40px 0px;
 }
 .dashboard-container .right-side .stats-wrapper .item {
   background: #FCFCFC;
   border-radius: 10px;
+  margin-right: 20px;
   width: 150px;
   height: 150px;
   display: flex;
