--- a/assets/sass/dashboard.sass
+++ b/assets/sass/dashboard.sass
@@ -129,11 +129,11 @@ body, html
       font-weight: 300
     .stats-wrapper
       display: flex
-      justify-content: space-around
       padding: 40px 0px
       .item
         background: #FCFCFC
         border-radius: 10px
+        margin-right: 20px
         width: 150px
         height: 150px
         display: flex
