--- a/assets/sass/main.sass
+++ b/assets/sass/main.sass
@@ -226,7 +226,7 @@ body
       height: 100px
       background: url("../svg/top-red-path.svg")
       background-position: bottom
-      background-size: cover
+      background-size: 200%
       background-repeat: no-repeat
       z-index: 0
     .left-side
@@ -277,7 +277,7 @@ body
       height: 450px
       background: url("../svg/top-white-path.svg")
       background-position: bottom
-      background-size: cover
+      background-size: 200%
       background-repeat: no-repeat
       z-index: 0
     .right-side
