--- a/assets/sass/company.sass
+++ b/assets/sass/company.sass
@@ -107,29 +107,29 @@ body, html
       &::before
         content: ""
         position: absolute
-        top: -45px
+        top: -100px
         left: 0px
         width: 100%
-        height: 47px
+        height: 100px
         background: url("../svg/black-path-top.svg")
-        background-size: cover
+        background-size: 200%
         background-position: top
         background-repeat: no-repeat
       &::after
         content: ""
         position: absolute
-        bottom: -99px
+        bottom: -100px
         left: 0px
         width: 100%
         height: 100px
         background: url("../svg/black-path-bottom.svg")
-        background-size: cover
+        background-size: 200%
         background-position: bottom
         background-repeat: no-repeat
 
     .logo
       width: 300px
-      height: 300px
+      height: 400px
       flex-shrink: 0
       background: #F9F9F9
       position: relative
@@ -144,10 +144,10 @@ body, html
       &::after
         content: ""
         position: absolute
-        width: 68px
+        width: 90px
         height: 100%
         top: 0px
-        right: -68px
+        right: -90px
         background: url("../svg/visit-card-top-left.svg")
         background-size: cover
         background-position: top left
@@ -157,7 +157,7 @@ body, html
     .content
       width: 100%
       box-sizing: border-box
-      padding: 10px 100px
+      padding: 10px 120px
       font-family: $cairo
       p
         img
