--- a/assets/sass/dashboard.sass
+++ b/assets/sass/dashboard.sass
@@ -218,6 +218,93 @@ body, html
         b
           color: #555
           font-weight: 400
+    .messages-wrapper
+      padding: 40px 0px
+      .item
+        font-family: $cairo
+        line-height: 60px
+        background: #FCFCFC
+        border-radius: 10px
+        box-sizing: border-box
+        padding: 0px 20px
+        color: #333
+        font-weight: 300
+        margin-bottom: 20px
+        position: relative
+        &:last-child
+          margin-bottom: 0
+        img,svg
+          vertical-align: middle
+          height: 20px
+          width: 20px
+          margin-right: 10px
+        b
+          color: #555
+          font-weight: 700
+          margin-right: 10px
+        .date
+          float: right
+          font-size: 14px
+        &.unseen
+          background: #FFFAEB
+    .inline-tools
+      display: block
+      margin-bottom: 40px
+      a
+        display: inline-block
+        line-height: 40px
+        background: #F9F9F9
+        color: #555
+        font-family: $cairo
+        padding: 0px 20px
+        font-size: 13px
+        font-weight: 300
+        img,svg
+          vertical-align: middle
+          height: 15px
+          width: 15px
+          margin-right: 5px
+        &.delete
+          background: #FFE3E3
+          color: #E86262
+          font-weight: 600
+          font-size: 11px
+    .form-container
+      max-width: 500px
+      h2
+        font-family: $cairo
+        color: #555
+        position: relative
+        font-size: 15px
+        margin-bottom: 20px
+        span
+          position: relative
+          z-index: 2
+          background: #FFF
+          padding: 0px 20px
+        &::after
+          content: ""
+          position: absolute
+          top: 50%
+          left: 0px
+          width: 60%
+          height: 0.5px
+          background: #555
+          z-index: 1
+      input
+        display: block
+        line-height: 50px
+        background: #F9F9F9
+        font-family: $cairo
+        box-sizing: border-box
+        padding: 0px 20px
+        border-radius: 10px
+        margin-bottom: 10px
+        border: 0
+        width: 100%
+        outline: 0
+        &:focus
+          border: rgba($red,0.2)
 
 .push-notifications-container
   position: fixed
@@ -317,3 +404,48 @@ body, html
     opacity: 1
 /* #########  END LOADING SPINNER  ##### */
 /* ##################################### */
+
+label.checkbox
+  cursor: pointer
+  input[type="checkbox"]
+    display: none
+    &:checked
+      & + span
+        background: #5ECB7B
+        border-color: #5ECB7B
+        position: relative
+        &::after
+          content: ""
+          position: absolute
+          left: 0px
+          top: 0px
+          background: url("../svg/check.svg")
+          background-position: center
+          background-size: 10px
+          background-repeat: no-repeat
+          width: 100%
+          height: 100%
+          animation-name: popup
+          animation-duration: 0.6s
+          animation-fill-mode: forwards
+          animation-timing-function: linear
+          @keyframes popup
+            0%
+              transform: scale(0)
+            40%
+              transform: scale(1.1)
+            80%
+              transform: scale(0.9)
+            100%
+              transform: scale(1)
+
+  span
+    content: ""
+    display: inline-block
+    width: 15px
+    height: 15px
+    background: #f1f1f1
+    vertical-align: -3px
+    margin-right: 5px
+    border-radius: 5px
+    border: 1px #DDD solid
