--- a/assets/sass/home.sass
+++ b/assets/sass/home.sass
@@ -139,6 +139,8 @@ body, html
               margin: 0px auto
               margin-bottom: 10px
               transition: 0.3s
+              height: 40px
+              width: 40px
             b
               line-height: normal
               color: #555
